LWC-1265: remove static injection from HttpClientManager.  nuked it completely.